[project]
name = "tgjco-march2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
tgjco-march2025 = "tgjco_march2025:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
